--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		embedded
         arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: false;'>
 
-        <a-entity gps-entity-place="latitude: -34.13418557527066; longitude: 18.426929836179845;" gltf-model="./assets/Berlin_School.fbx" rotation="0 0 0" scale="1 1 1"/>
+        <a-entity gps-entity-place="latitude: -34.13418557527066; longitude: 18.426929836179845;" fbx-model="./assets/Berlin_School.fbx" rotation="0 0 0" scale="1 1 1"/>
 
         <a-camera gps-camera rotation-reader></a-camera>
 	</a-scene>
